--- a/lidmagnit/index.html
+++ b/lidmagnit/index.html
@@ -288,11 +288,13 @@
             <div class="sec_title">
                 <img src="../img/lms_booster/sec_what_results__title-label3.svg" alt="title_label">
                 <h2>Как добиться повышения зарплаты и создать фундамент для дальнейшего карьерного роста?</h2>
-                <div class="row justify-content-center my-5">
-                    <p>Я видел сотни и тысячи карьер, как мега успешных, так и провальных! На моем пути попадались
+                <div class="row justify-content-center my-3 my-md-5">
+                    <div class="col-12">
+                        <p class="mx-auto">Я видел сотни и тысячи карьер, как мега успешных, так и провальных! На моем пути попадались
                             “полные неучи” в ТОП-менеджерах, и умные ребята, которым не хватало смелости взять себя в
                             руки и начать расти по карьерной лестнице. Отсутствие смелости - заставляло их оставаться на
                             том же уровне заработка, что в прошлых годах... </p>
+                    </div>
                 </div>
             </div>
             <div class="row justify-content-center">
@@ -361,33 +363,32 @@
             </div>
             <div class="sleder_wrapp row">
                 <span class="arrow-prev">
-                    <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
-                            fill="#BDBDBD" />
-                    </svg>
-                </span>
+                            <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
+                                    fill="#BDBDBD" />
+                            </svg>
+                        </span>
                 <span class="arrow-next">
-                    <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
-                            fill="#BDBDBD" />
-                    </svg>
-                </span>
+                            <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
+                                    fill="#BDBDBD" />
+                            </svg>
+                        </span>
                 <div class="sliderAuthors authors">
                     <div class="col-12 py-5 px-4">
                         <div class="card">
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="card_profile">
-                                        <div class="icon" style="background-image: url('img/lms_booster/evgen.jpg');"></div>
-                                        <h3>Евгений Маташ</h3>
-                                        <p>Менеджер по работе с партнерами</p>
+                                        <div class="icon" style="background-image: url('../img/lms_booster/kiril.png');"></div>
+                                        <h3>Кирилл Соловьев</h3>
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
+                                        <iframe src="https://www.youtube.com/embed/KDh31CRex6c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -399,14 +400,13 @@
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="card_profile">
-                                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                                        <h3>Евгений Маташ</h3>
-                                        <p>Менеджер по работе с партнерами</p>
+                                        <div class="icon" style="background-image: url('../img/lms_booster/new_york.png');"></div>
+                                        <h3>Отзыв из Нью-Йорка</h3>
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
+                                        <iframe src="https://www.youtube.com/embed/nxnUsNg-8t8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -418,14 +418,31 @@
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="card_profile">
-                                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                                        <h3>Евгений Маташ</h3>
-                                        <p>Менеджер по работе с партнерами</p>
+                                        <div class="icon" style="background-image: url('../img/lms_booster/andrey.png');"></div>
+                                        <h3>Андрей Чарынцев</h3>
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
+                                        <iframe src="https://www.youtube.com/embed/J7mdrSHPnm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 py-5 px-4">
+                        <div class="card">
+                            <div class="row align-items-center">
+                                <div class="col-md-5">
+                                    <div class="card_profile">
+                                        <div class="icon" style="background-image:  lms_booster/roman.png');"></div>
+                                        <h3>Роман Морковин</h3>
+                                    </div>
+                                </div>
+                                <div class="col-md-7">
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
+                                        <iframe src="https://www.youtube.com/embed/hXggM2PjHhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
