--- a/vebinar/index.html
+++ b/vebinar/index.html
@@ -97,27 +97,27 @@
                             холдингов - Константина Лашкевича</p>
                     </div>
                     <div class="card">
-                            <form action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post" class="b-form">
-                                <div class="form-group">
-                                    <label for="InputName" class="text-yellow">Имя</label>
-                                    <input type="text" name="name" class="form-control" id="InputName" aria-describedby="InputName" placeholder="Введите ваше имя" minlength="2" required>
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputPhone" class="text-yellow">Номер телефона</label>
-                                    <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required minlength="10" maxlength="15">
-                                </div>
-                                <div class="form-group">
-                                    <label for="InputEmail" class="text-yellow">E-mail</label>
-                                    <input type="email" name="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Введите ваш Email " required>
-                                </div>
-                                <!-- Токен списка -->
-                                <!-- Получить API ID на: https://app.getresponse.com/campaign_list.html -->
-                                <input type="hidden" name="campaign_token" value="KTMBb" />
-                                <!-- Добавить подписчика в цикл на определенный день (по желанию) -->
-                                <input type="hidden" name="start_day" value="0" />
-                                <!-- Кнопка подписаться -->
-                                <button type="submit" class="btn btn-success w-100">Зарегистрироваться</button>
-                            </form>
+                        <form action="https://app.getresponse.com/add_subscriber.html" accept-charset="utf-8" method="post" class="b-form">
+                            <div class="form-group">
+                                <label for="InputName" class="text-yellow">Имя</label>
+                                <input type="text" name="name" class="form-control" id="InputName" aria-describedby="InputName" placeholder="Введите ваше имя" minlength="2" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="InputPhone" class="text-yellow">Номер телефона</label>
+                                <input type="text" name="custom_mobile_phone" class="form-control phone" id="InputPhone" aria-describedby="InputPhone" placeholder="Введите ваш телефон" autocomplete="off" required minlength="10" maxlength="15">
+                            </div>
+                            <div class="form-group">
+                                <label for="InputEmail" class="text-yellow">E-mail</label>
+                                <input type="email" name="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Введите ваш Email " required>
+                            </div>
+                            <!-- Токен списка -->
+                            <!-- Получить API ID на: https://app.getresponse.com/campaign_list.html -->
+                            <input type="hidden" name="campaign_token" value="KTMBb" />
+                            <!-- Добавить подписчика в цикл на определенный день (по желанию) -->
+                            <input type="hidden" name="start_day" value="0" />
+                            <!-- Кнопка подписаться -->
+                            <button type="submit" class="btn btn-success w-100">Зарегистрироваться</button>
+                        </form>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -390,34 +390,32 @@
             </div>
             <div class="sleder_wrapp row">
                 <span class="arrow-prev">
-                    <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
-                            fill="#BDBDBD" />
-                    </svg>
-                </span>
+                            <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
+                                    fill="#BDBDBD" />
+                            </svg>
+                        </span>
                 <span class="arrow-next">
-                    <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
-                            fill="#BDBDBD" />
-                    </svg>
-                </span>
+                            <svg width="15" height="28" viewBox="0 0 15 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M14.0532 27.2416C14.4224 26.8724 14.4224 26.2724 14.0532 25.9032L2.26144 14.1346L14.0532 2.34284C14.4224 1.97363 14.4224 1.37366 14.0532 1.00445C13.684 0.635236 13.084 0.635236 12.7148 1.00445L0.276925 13.4423C0.0923196 13.6269 1.54154e-05 13.8577 1.54184e-05 14.1115C1.54211e-05 14.3423 0.0923197 14.5961 0.276925 14.7807L12.7148 27.2185C13.084 27.6108 13.684 27.6108 14.0532 27.2416Z"
+                                    fill="#BDBDBD" />
+                            </svg>
+                        </span>
                 <div class="sliderAuthors authors">
                     <div class="col-12 py-5 px-4">
                         <div class="card">
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="card_profile">
-                                        <div class="icon" style="background-image: url('img/lms_booster/evgen.jpg');">
-                                        </div>
-                                        <h3>Евгений Маташ</h3>
-                                        <p>Менеджер по работе с партнерами</p>
+                                        <div class="icon" style="background-image: url('../img/lms_booster/kiril.png');"></div>
+                                        <h3>Кирилл Соловьев</h3>
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
+                                        <iframe src="https://www.youtube.com/embed/KDh31CRex6c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -429,14 +427,13 @@
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="card_profile">
-                                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                                        <h3>Евгений Маташ</h3>
-                                        <p>Менеджер по работе с партнерами</p>
+                                        <div class="icon" style="background-image: url('../img/lms_booster/new_york.png');"></div>
+                                        <h3>Отзыв из Нью-Йорка</h3>
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
+                                        <iframe src="https://www.youtube.com/embed/nxnUsNg-8t8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -448,14 +445,31 @@
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="card_profile">
-                                        <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                                        <h3>Евгений Маташ</h3>
-                                        <p>Менеджер по работе с партнерами</p>
+                                        <div class="icon" style="background-image: url('../img/lms_booster/andrey.png');"></div>
+                                        <h3>Андрей Чарынцев</h3>
                                     </div>
                                 </div>
                                 <div class="col-md-7">
-                                    <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe src="https://www.youtube.com/embed/Axr8yKMLYr4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
+                                        <iframe src="https://www.youtube.com/embed/J7mdrSHPnm4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12 py-5 px-4">
+                        <div class="card">
+                            <div class="row align-items-center">
+                                <div class="col-md-5">
+                                    <div class="card_profile">
+                                        <div class="icon" style="background-image:  lms_booster/roman.png');"></div>
+                                        <h3>Роман Морковин</h3>
+                                    </div>
+                                </div>
+                                <div class="col-md-7">
+                                    <div class="embed-responsive embed-responsive-16by9 js-iframe_swiping active">
+                                        <iframe src="https://www.youtube.com/embed/hXggM2PjHhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
                                 </div>
                             </div>
