minor scroll btn fix

--- a/earlybirds/index.html
+++ b/earlybirds/index.html
@@ -1105,7 +1105,7 @@
                         моментов, достигаторства и стремления идти вперед. Но были еще и падения...после которых я мог
                         легко сдаться и не добиться ничего! Но обо всем по порядку...
                     </p>
-                    <a id="play-video" href="" class="btn btn-success w-100">Полная История</a>
+                    <a id="play-video" href="#sec_author_history" class="btn btn-success w-100 page-scroll">Смотреть мою историю</a>
                 </div>
             </div>
         </div>
