--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@
     <!-- / sec_prizes -->
 
     <!-- sec_author_history -->
-    <section class="sec sec_author_history">
+    <section id="sec_author_history" class="sec sec_author_history">
         <div class="container">
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <img alt="" class="abs_pic dubl_line" src="img/abs_pic/dubl_line.svg">
@@ -1333,7 +1333,7 @@
                         моментов, достигаторства и стремления идти вперед. Но были еще и падения...после которых я мог
                         легко сдаться и не добиться ничего! Но обо всем по порядку...
                     </p>
-                    <a id="play-video" href="" class="btn btn-success w-100">Полная История</a>
+                    <a id="play-video" href="#sec_author_history" class="btn btn-success w-100 page-scroll">Смотреть мою историю</a>
                 </div>
             </div>
         </div>
